[project]
name = "llm-fragments-pure"
version = "0.1"
description = "Run URLs through the pure.md API"
readme = "README.md"
authors = [{name = "Assistant"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "llm",
    "httpx"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/user/llm-fragments-pure"

[project.entry-points.llm]
fragments_pure = "llm_fragments_pure"

[project.optional-dependencies]
test = ["pytest", "pytest-httpx"]